--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-	background-image: url('./images/bg-intro-desktop.png');
+	background: hsl(0, 100%, 74%);
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-family: 'Poppins', sans-serif;
 }
