Signup Form Draft

--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -7,6 +7,8 @@
 	background-color: hsl(248, 32%, 49%);
 	border-radius: 5px;
 	text-align: center;
+	margin: 10px;
+	box-shadow: 0 10px 0 rgba(0, 0, 0, 0.15);
 }
 
 .header-button-text {
@@ -21,9 +23,33 @@ span {
 }
 
 .form {
-	height: 350px;
+	display: flex;
+	flex-direction: column;
+	color: #000000;
+	background-color: #fff;
+	width: 100%;
+	margin-top: 38px;
+	margin-bottom: 30px;
+	padding: 38px 38px 37px;
+	border-radius: 2px;
+	box-shadow: 0 10px 0 rgba(0, 0, 0, 0.15);
+}
+
+.field {
+}
+
+.input {
+	border-color: hsl(248, 32%, 49%);
+}
+
+.error {
+	color: hsl(0, 100%, 74%);
 }
 
 .input {
 	display: block;
+}
+
+.legal {
+	color: hsl(0, 100%, 74%);
 }
