--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,21 @@
 .header {
 	color: #fff;
-	display: inline;
 	text-align: center;
 }
 
 .title {
 	margin: 0 auto;
-	font-size: 45px;
-	line-height: 1.3;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 1.3;
+  max-width: 360px;
+  text-align: left;
 }
 
 .sub-title {
 	margin: 32px auto 0;
-	line-height: 1.65;
+  line-height: 1.65;
+  letter-spacing: 0.16px;
+  max-width: 480px;
+  text-align: left;
 }
