--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 body {
-	background: hsl(0, 100%, 74%);
-	margin: 0;
+  background: hsl(0, 100%, 74%);
+  background-image: url('./images/bg-intro-desktop.png');
+  font-family: 'Poppins', sans-serif;
+
+	margin: 0 auto;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
 		'Droid Sans', 'Helvetica Neue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-family: 'Poppins', sans-serif;
 }
