--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  display: flex;
-  align-items: center;
-  background-image: url('./images/bg-intro-desktop.png');
+.app {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10% 0;
 }
