--- a/src/components/Signup/Signup.css
+++ b/src/components/Signup/Signup.css
@@ -1,23 +1,23 @@
 .signup {
-  text-align: center;
+	text-align: center;
+	width: 40%;
 }
 
 .header-button {
-	border-radius: 16px;
-  margin: 10px;
-  padding: 32px 96px 26px;
-  font-size: 24px;
-  line-height: 1.75;
-  letter-spacing: 0.56px;
-  background-color: hsl(248, 32%, 49%);
+	border-radius: 8px;
+	font-size: 24px;
+	line-height: 1.75;
+	height: 60px;
+	letter-spacing: 0.56px;
+	background-color: hsl(248, 32%, 49%);
 	box-shadow: 0 10px 0 rgba(0, 0, 0, 0.15);
 }
 
 .header-button-text {
 	color: #fff;
-	margin: auto;
-  line-height: 1;
-  font-size: 20px;
+	line-height: 1;
+	font-size: 20px;
+	padding: 3%;
 }
 
 span {
@@ -25,70 +25,72 @@ span {
 }
 
 .form {
-	display: flex;
-	flex-direction: column;
 	color: #000000;
 	background-color: #fff;
-  margin-top: 20px;
-  padding: 38px 38px;
+	margin-top: 20px;
+	padding: 5% 5%;
 	border-radius: 2px;
 	box-shadow: 0 10px 0 rgba(0, 0, 0, 0.15);
 }
 
-.field-list {
-  margin-bottom: 30px;
-}
-
-.field-item:not(:last-child) {
-  margin-bottom: 1.6rem;
-}
-
-.field {
-  display: block;
-  font-weight: 600;
+.field-item {
+	padding: 5px;
 }
 
 .field-input {
-  border: 1.6px solid hsl(246, 25%, 77%);
-  width: 100%;
-  padding: 15px 29px 10px;
-  font-size: 22px;
-  letter-spacing: 0.4px;
-  border-radius: 8px;
-  cursor: pointer;
+	border: 1.6px solid hsl(246, 25%, 77%);
+	width: 100%;
+	font-size: 22px;
+	font-weight: 600;
+	letter-spacing: 0.4px;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
-.field-input:hover, .field-input:focus {
-  border-color: hsl(249, 10%, 26%);
-  outline: none;
+.field-input:hover,
+.field-input:focus {
+	border-color: hsl(249, 10%, 26%);
+	outline: none;
 }
 
 .field-input.invalid {
-  border-color: hsl(0, 100%, 74%);
-  background: url('/images/icon-error.svg') no-repeat center right;
-  background-origin: content-box;
+	border-color: hsl(0, 100%, 74%);
+	background: url('/images/icon-error.svg') no-repeat center right;
+	background-origin: content-box;
 }
 
 .field-input.invalid + .error {
-  display: block;
+	display: block;
 }
 
 .field-input:not(:last-child) {
-  margin-bottom: 26px;
+	margin-bottom: 26px;
 }
 
 .error {
-  color: hsl(0, 100%, 74%);
-  display: none;
-  margin-top: 8px;
-  font-weight: 400;
-  font-size: 19px;
-  font-style: italic;
-  text-align: right;
+	color: hsl(0, 100%, 74%);
+	display: none;
+	font-weight: 400;
+	font-size: 19px;
+	font-style: italic;
+	text-align: right;
 }
 
 .input {
 	display: block;
+}
+
+.trial-button {
+	color: #fff;
+	border-radius: 10px;
+	margin: 10px;
+	width: 100%;
+	font-size: 24px;
+	line-height: 1.75;
+	letter-spacing: 0.56px;
+	font-family: 'Poppins';
+	font-weight: 700;
+	background-color: hsl(154, 59%, 51%);
 }
 
 .legal {
