--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
 	color: #fff;
-	width: 40%;
+	width: 49%;
 }
 
 .title {
@@ -8,7 +8,6 @@
 	font-weight: 700;
 	line-height: 1.3;
 	text-align: left;
-	width: 78%;
 	font-family: 'Poppins', sans-serif;
 }
 
@@ -17,5 +16,22 @@
 	letter-spacing: 0.16px;
 	text-align: left;
 	font-size: 20px;
-	width: 82%;
+}
+
+@media only screen and (max-width: 900px) {
+  .header {
+    width: 98%;
+  }
+  .title {
+    font-size: 44px;
+    text-align: center;
+    width: 93%;
+    padding: 0 3%;
+  }
+  .sub-title {
+    letter-spacing: 5px;
+    text-align: center;
+    font-size: 14px;
+    width: 98%;
+  }
 }
