--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-	background: hsl(0, 100%, 74%);
+  padding: 1%;
+  background: hsl(0, 100%, 74%);
 	background-image: url('./images/bg-intro-desktop.png');
 	font-family: 'Poppins', sans-serif;
 	-webkit-font-smoothing: antialiased;
